add names for 3

--- a/index.html
+++ b/index.html
@@ -80,18 +80,18 @@
     <section id="team">
         <h2>Team Members</h2>
         <div class="team-member">
-            <h3>Member 1 Name</h3>
+            <h3>Yang Jun</h3>
             <p>Email: member1@example.com</p>
             <p>Role: [e.g., Project Leader, Developer, Designer]</p>
         </div>
         <div class="team-member">
-            <h3>Member 2 Name</h3>
+            <h3>Zhang XinZhe</h3>
             <p>Email: member2@example.com</p>
             <p>Role: [e.g., Developer, Researcher]</p>
         </div>
         <div class="team-member">
-            <h3>Member 3 Name</h3>
-            <p>Email: member3@example.com</p>
+            <h3>Song Yuan</h3>
+            <p>Email: peter2317@live.com</p>
             <p>Role: [e.g., Designer, Tester]</p>
         </div>
         <div class="team-member">
