--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
 <body>
 
 <header>
-    <h1>Team Project Website</h1>
-    <p>Project Title: <strong>Your Project Name</strong></p>
+    <h1>Project Website</h1>
+    <p>Project Title: <strong>A VR system for alleviating test anxiety</strong></p>
 </header>
 
 <nav>
@@ -74,19 +74,23 @@
 <div class="container">
     <section id="about">
         <h2>About the Project</h2>
-        <p>This project is focused on <em>[brief description of your project]</em>. Our goal is to <em>[project goals]</em>.</p>
+        <p>This project is focused on <em>an application with Unity3D on VR headsets</em>. Our goal is to <em>develop a 
+            solution of test anxiety alleviation with a game where users can control a vurtual avatar to write with 
+            motion capture gloves.</em>.</p>
+        <p>Our project will be developed using <strong>Unity3D</strong> and <strong>VR headsets</strong>. The project 
+            will be developed by a team of four members.</p>
     </section>
 
     <section id="team">
         <h2>Team Members</h2>
         <div class="team-member">
             <h3>Yang Jun</h3>
-            <p>Email: member1@example.com</p>
+            <p>Email: yang2004@foxmail.com</p>
             <p>Role: [e.g., Project Leader, Developer, Designer]</p>
         </div>
         <div class="team-member">
             <h3>Zhang XinZhe</h3>
-            <p>Email: member2@example.com</p>
+            <p>Email: 764680721@qq.com</p>
             <p>Role: [e.g., Developer, Researcher]</p>
         </div>
         <div class="team-member">
@@ -95,15 +99,15 @@
             <p>Role: [e.g., Designer, Tester]</p>
         </div>
         <div class="team-member">
-            <h3>Member 4 Name</h3>
-            <p>Email: member4@example.com</p>
+            <h3>Yuan Li</h3>
+            <p>Email: 3193792220@qq.com</p>
             <p>Role: [e.g., Developer, Analyst]</p>
         </div>
     </section>
 
     <section id="progress">
         <h2>Project Progress</h2>
-        <p>Here, you can update the project milestones and progress regularly. Include screenshots, code snippets, or any other relevant information.</p>
+        <p>Aug 22nd 2024 We have learned the basics of Unity3D environment and a basic program has been written.</p>
     </section>
 
     <section id="results">
@@ -113,7 +117,7 @@
 
     <section id="contact">
         <h2>Contact</h2>
-        <p>If you have any questions, feel free to reach out to us at <strong>team-email@example.com</strong>.</p>
+        <p>If you have any questions, feel free to reach out to us at <strong>yang2004@foxmail.com</strong>.</p>
     </section>
 </div>
 
