--- a/index.html
+++ b/index.html
@@ -86,22 +86,22 @@
         <div class="team-member">
             <h3>Yang Jun</h3>
             <p>Email: yang2004@foxmail.com</p>
-            <p>Role: [e.g., Project Leader, Developer, Designer]</p>
+            <p>Role: [Project Leader, Developer, Designer]</p>
         </div>
         <div class="team-member">
             <h3>Zhang XinZhe</h3>
             <p>Email: 764680721@qq.com</p>
-            <p>Role: [e.g., Developer, Researcher]</p>
+            <p>Role: [Developer, Researcher]</p>
         </div>
         <div class="team-member">
             <h3>Song Yuan</h3>
             <p>Email: peter2317@live.com</p>
-            <p>Role: [e.g., Designer, Tester]</p>
+            <p>Role: [Designer, Tester]</p>
         </div>
         <div class="team-member">
             <h3>Yuan Li</h3>
             <p>Email: 3193792220@qq.com</p>
-            <p>Role: [e.g., Developer, Analyst]</p>
+            <p>Role: [Developer, Analyst]</p>
         </div>
     </section>
 
