more .git/COMMIT_EDITMSG

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
     <section id="results">
         <h2>Project Results</h2>
-        <p>Once the project is complete, use this section to showcase the final results, reports, or presentations.</p>
+        <p>Once the project is complete, this section is used to showcase the final results, reports, or presentations.</p>
     </section>
 
     <section id="contact">
