--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <h2>Team Members</h2>
         <div class="team-member">
             <h3>Yang Jun</h3>
-            <p>Email: yang2004@foxmail.com</p>
+            <p>Email: yangjun2004@foxmail.com</p>
             <p>Role: [Project Leader, Developer, Designer]</p>
         </div>
         <div class="team-member">
@@ -117,7 +117,7 @@
 
     <section id="contact">
         <h2>Contact</h2>
-        <p>If you have any questions, feel free to reach out to us at <strong>yang2004@foxmail.com</strong>.</p>
+        <p>If you have any questions, feel free to reach out to us at <strong>yangjun2004@foxmail.com</strong>.</p>
     </section>
 </div>
 
