Progress section的文字补充

--- a/index.html
+++ b/index.html
@@ -107,7 +107,15 @@
 
     <section id="progress">
         <h2>Project Progress</h2>
-        <p>Aug 22nd 2024 We have learned the basics of Unity3D environment and a basic program has been written.</p>
+        <p><strong>1. Aug 22nd 2024</strong> We have learned the basics of Unity3D environment and a basic program has been written.</p>
+        <p><strong>2. Aug 28th 2024</strong> We have achieved the connection between PICO and the computer, experienced the virtual reality 
+            scene, and familiarized ourselves with the relevant operation process.</p>
+        <p><strong>3. Sept 1st 2024</strong> We have implemented PICO and glove to computer connection, which can capture finger movements 
+            in simulated classroom environment, but it seems impossible to write with a pen. </p>
+        <p><strong>4. Sept 5th 2024</strong> Our device was able to successfully capture gestures and complete writing on paper in a 
+            simulated classroom environment, but the writing was not stable and precise enough.</p>
+        <p><strong>5. Sept 8th 2024</strong> We have achieved relatively stable writing and invited other students to experience PICO 
+            and simulate classroom environments, and exchange their experiences and insights.</p>
     </section>
 
     <section id="results">
