results = {   "path": ".git/COMMIT_EDITMSG",   "size": 0,   "type": "file",   "contents": "" }

--- a/index.html
+++ b/index.html
@@ -120,7 +120,11 @@
 
     <section id="results">
         <h2>Project Results</h2>
-        <p>Once the project is complete, this section is used to showcase the final results, reports, or presentations.</p>
+        <p>We have made a  test stress relief system based on Unity3D in which user can use tracking gloves to simulate writing in VR test classroom. 
+            The system can help users to alleviate test anxiety and improve their test performance.
+            We invited 10 students to experience the system and 8 of them reported that they felt less anxious during the test after using the system.
+            The system has been well received by the students and we are planning to further improve the system and conduct more tests.
+        </p>
     </section>
 
     <section id="contact">
