给progress section的第四点和第五点分别添加了测试图片与视频，后续直接替换即可

--- a/index.html
+++ b/index.html
@@ -114,8 +114,11 @@
             in simulated classroom environment, but it seems impossible to write with a pen. </p>
         <p><strong>4. Sept 5th 2024</strong> Our device was able to successfully capture gestures and complete writing on paper in a 
             simulated classroom environment, but the writing was not stable and precise enough.</p>
+        <img src="test4.png" alt="test4" width="500" height="300">
         <p><strong>5. Sept 8th 2024</strong> We have achieved relatively stable writing and invited other students to experience PICO 
             and simulate classroom environments, and exchange their experiences and insights.</p>
+        <video width="500" height="300" controls>
+            <source src="test5.mp4" type="video/mp4">
     </section>
 
     <section id="results">
