--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
     <section id="progress">
         <h2>Project Progress</h2>
         <p><strong>1. Aug 22nd 2024</strong> We have learned the basics of Unity3D environment and a basic program has been written.</p>
+        <img src="images/IMG_2162.JPG" alt="Unity3D Environment">
         <p><strong>2. Aug 28th 2024</strong> We have achieved the connection between PICO and the computer, experienced the virtual reality 
             scene, and familiarized ourselves with the relevant operation process.</p>
         <p><strong>3. Sept 1st 2024</strong> We have implemented PICO and glove to computer connection, which can capture finger movements 
