--- a/index.html
+++ b/index.html
@@ -54,6 +54,10 @@
             margin: 10px 0;
             border-radius: 5px;
         }
+        img {
+            max-width: 100%;
+            height: auto;
+        }
     </style>
 </head>
 <body>
