added connecting video

--- a/index.html
+++ b/index.html
@@ -58,6 +58,10 @@
             max-width: 100%;
             height: auto;
         }
+        .responsive-video {
+            max-width: 100%;
+            height: auto;
+        }
     </style>
 </head>
 <body>
@@ -115,6 +119,7 @@
         <img src="images/IMG_2162.JPG" alt="Unity3D Environment">
         <p><strong>2. Aug 28th 2024</strong> We have achieved the connection between PICO and the computer, experienced the virtual reality 
             scene, and familiarized ourselves with the relevant operation process.</p>
+        <video src="videos/experiencing.mp4" controls class="responsive-video"></video>
         <p><strong>3. Sept 1st 2024</strong> We have implemented PICO and glove to computer connection, which can capture finger movements 
             in simulated classroom environment, but it seems impossible to write with a pen. </p>
         <p><strong>4. Sept 5th 2024</strong> Our device was able to successfully capture gestures and complete writing on paper in a 
