added setup video

--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
         <video src="videos/experiencing.mp4" controls class="responsive-video"></video>
         <p><strong>3. Sept 1st 2024</strong> We have implemented PICO and glove to computer connection, which can capture finger movements 
             in simulated classroom environment, but it seems impossible to write with a pen. </p>
+            <video src="videos/VR classroom setup.mp4" controls class="responsive-video"></video>
         <p><strong>4. Sept 5th 2024</strong> Our device was able to successfully capture gestures and complete writing on paper in a 
             simulated classroom environment, but the writing was not stable and precise enough.</p>
         <img src="test4.png" alt="test4" width="500" height="300">
