--- a/index.html
+++ b/index.html
@@ -125,11 +125,11 @@
             <video src="videos/VR classroom setup.mp4" controls class="responsive-video"></video>
         <p><strong>4. Sept 5th 2024</strong> Our device was able to successfully capture gestures and complete writing on paper in a 
             simulated classroom environment, but the writing was not stable and precise enough.</p>
-        <img src="test4.png" alt="test4" width="500" height="300">
+        <img src="videos/v3.mp4" alt="test4" width="500" height="300">
         <p><strong>5. Sept 8th 2024</strong> We have achieved relatively stable writing and invited other students to experience PICO 
             and simulate classroom environments, and exchange their experiences and insights.</p>
         <video width="500" height="300" controls>
-            <source src="test5.mp4" type="video/mp4">
+            <source src="images/p1.jpg" type="video/mp4">
     </section>
 
     <section id="results">
