完善了相关信息

--- a/index.html
+++ b/index.html
@@ -116,31 +116,37 @@
     <section id="progress">
         <h2>Project Progress</h2>
         <p><strong>1. Aug 22nd 2024</strong> We have learned the basics of Unity3D environment and a basic program has been written.</p>
-        <img src="images/IMG_2162.JPG" alt="Unity3D Environment">
+        <img src="images/IMG_2162.JPG" alt="Unity3D Environment" width="500" height="300">
         <p><strong>2. Aug 28th 2024</strong> We have achieved the connection between PICO and the computer, experienced the virtual reality 
             scene, and familiarized ourselves with the relevant operation process.</p>
-        <video src="videos/experiencing.mp4" controls class="responsive-video"></video>
+        <video src="videos/experiencing.mp4" controls width="640" height="360"></video>
         <p><strong>3. Sept 1st 2024</strong> We have implemented PICO and glove to computer connection, which can capture finger movements 
             in simulated classroom environment, but it seems impossible to write with a pen. </p>
-            <video src="videos/VR classroom setup.mp4" controls class="responsive-video"></video>
+            <video src="videos/VR classroom setup.mp4" controls width="640" height="360"></video>
         <p><strong>4. Sept 5th 2024</strong> Our device was able to successfully capture gestures and complete writing on paper in a 
             simulated classroom environment, but the writing was not stable and precise enough.</p>
-        <img src="videos/v3.mp4" alt="test4" width="500" height="300">
         <p><strong>5. Sept 8th 2024</strong> We have achieved relatively stable writing and invited other students to experience PICO 
             and simulate classroom environments, and exchange their experiences and insights.</p>
-        <video width="500" height="300" controls>
-            <source src="images/p1.jpg" type="video/mp4">
+            <img src="images/p1.jpg" type="jpg" width="500" height="300">
+            <video src="videos/v1.mp4" controls width="640" height="360"></video>
+            <video src="videos/v2.mp4" controls width="640" height="360"></video>
     </section>
 
     <section id="results">
         <h2>Project Results</h2>
-        <p>We have made a  test stress relief system based on Unity3D in which user can use tracking gloves to simulate writing in VR test classroom. 
-            The system can help users to alleviate test anxiety and improve their test performance.
-            We invited 10 students to experience the system and 8 of them reported that they felt less anxious during the test after using the system.
-            The system has been well received by the students and we are planning to further improve the system and conduct more tests.
+        <p>After multiple rounds of debugging and testing, we successfully connected PICO, sensing gloves, and a computer, and experienced the simulated exam system in Unity. 
+            Through calibration in Unity in the early stage and subsequent adjustments to sitting posture and glove sensor orientation, normal finger movement in the scene was achieved. 
+            By holding the "pen" in the scene, basic answers can be given on the exam paper in the scene.
         </p>
-        <p> We have invited one student to experience the system and he reported that he felt less anxious during the test after using the system. 
-            The system has been well received by the student and we are planning to further improve the system and conduct more tests.
+        <video src="videos/v3.mp4" controls width="640" height="360"></video>
+        <img src="images/p3.jpg" type="jpg" width="500" height="300">
+        <p> In order to simulate a more realistic classroom scene, student Zhang Xinzhe in the group added a patrol teacher outside the classroom corridor, 
+            who would periodically walk back and forth outside the classroom corridor.
+        </p>
+        <img src="images/p5.png" type="png" width="500" height="300">
+        <p>
+            Finally, our group invited a student outside of the course to experience our equipment and simulated exam system. 
+            He shared his experience and gave our group some expectations and suggestions.
         </p>
         <video src="videos/VID20240908173215.mp4" controls class="responsive-video"></video>
     </section>
